# HHEP

./: TODO  hhep.cabal  package.yaml  stack.yaml
app/: drawPoints.hs
src/Data/: Builder.hs  Dist.hs  Histogram.hs  TypeList.hs
src/Data/HEP/: Jet.hs  LorentzVector.hs  PID.hs  ThreeMomentum.hs
src/Data/Histogram/: Bin.hs  Dimension.hs  Distribution.hs
src/Data/Serialize/: Vector.hs
src/Graphics/: Histo.hs
