name:                hhep
version:             0.3.0.0
synopsis:            
    conveniences for HEP analysis
description:         
    conveniences for HEP analysis
license:             BSD3
license-file:        LICENSE
author:              Chris Pollard
maintainer:          cspollard@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: http://github.com/cspollard/hhep

library
  exposed-modules:     Data.HEP.LorentzVector
                     , Data.HEP.PID

  build-depends:       base == 4.9.*
                     , lens == 4.15.*
                     , vector == 0.11.*
                     , containers == 0.5.*
                     , cereal == 0.5.*

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
