name:                hhep
version:             0.3.0.0
synopsis:
    conveniences for HEP analysis
description:
    conveniences for HEP analysis
license:             BSD3
license-file:        LICENSE
author:              Chris Pollard
maintainer:          cspollard@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: http://github.com/cspollard/hhep

library
  exposed-modules:     Data.HEP.LorentzVector
                     , Data.HEP.PID
                     , Data.HEP.ThreeMomentum

  build-depends:       base
                     , lens
                     , vector
                     , containers
                     , cereal

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
